# YaoPlayerAndroid

./: settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/yao/yaoplayerandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  build_android.sh
app/src/main/cpp/: CMakeLists.txt  build_android.sh  native-lib.cpp
app/src/main/cpp/YaoAV/: CMakeLists.txt  EyerAVBitstreamFilter.cpp  EyerAVBitstreamFilter.hpp  EyerAVBitstreamFilterPrivate.hpp  YaoAV.h  YaoAVDecode.cpp  YaoAVDecodeContextPrivate.h  YaoAVFrame.cpp  YaoAVFramePrivate.h  YaoAVPacket.cpp  YaoAVPacketPrivate.h  YaoAVReader.cpp  YaoAVReaderPrivate.h  YaoAVStream.cpp  YaoAVStreamPrivate.h  YaoTime.cpp  avLib.cpp
app/src/main/cpp/YaoCodec/: CMakeLists.txt  YaoCodec.h  YaoMediaCodec.cpp
app/src/main/cpp/YaoGL/: CMakeLists.txt  YaoGL.h  YaoGLProgram.cpp  YaoGLTexture.cpp  YaoVAO.cpp
app/src/main/cpp/YaoImg/: CMakeLists.txt
app/src/main/cpp/YaoPlayer/: CMakeLists.txt  YaoDecodeThread.cpp  YaoPlayer.cpp  YaoPlayer.h  YaoPlayerCtr.cpp  YaoPlayerGL.cpp  YaoPlayerReaderThread.cpp  YaoPlayerSLThread.cpp
app/src/main/cpp/YaoPlayerJni/: CMakeLists.txt  JavaVMObj.cpp  JavaVMObj.h  playerJniGL.cpp  playerJniPlay.cpp  playerJniUtil.cpp  playerJniUtil.hpp
app/src/main/cpp/YaoQueue/: Queue.h
app/src/main/cpp/YaoSL/: CMakeLists.txt  YaoSL.cpp  YaoSL.h
app/src/main/cpp/YaoThread/: CMakeLists.txt  YaoThread.cpp  YaoThread.h
app/src/main/cpp/gl/: YaoGL.h  YaoGLProgram.cpp  YaoGLShader.cpp  YaoGLTexture.cpp  YaoVAO.cpp
app/src/main/java/com/yao/yaoplayerandroid/: AVReader.java  GLESJNIView.java  GLRender.java  MainActivity.java  MySurfaceView.java
app/src/main/java/com/yao/yaoplayerandroid/av/: AVReader.java
app/src/main/java/com/yao/yaoplayerandroid/base/: YaoObject.java  messageHandle.java
app/src/main/java/com/yao/yaoplayerandroid/callback/: PlayCallback.java  ProgressBarHandler.java
app/src/main/java/com/yao/yaoplayerandroid/codec/: InputBufferThread.java  OutputBufferThread.java  YaoMediaCodec.java
app/src/main/java/com/yao/yaoplayerandroid/player/: PlayEndCallback.java  Player.java  slThread.java
app/src/main/java/com/yao/yaoplayerandroid/test/: Nalu.java  ReadNalu.java
app/src/main/res/drawable/: seekbar_dot_bg.xml  shape_seekbar_bg.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yao/yaoplayerandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
